# WidgetPRO

./: README.md  pyproject.toml  start-watchwidget.bat  start-watchwidget.vbs
src/watchwidget/: __init__.py  __main__.py  config.py  main.py  models.py
src/watchwidget/desktop/: __init__.py  win32.py  window.py
src/watchwidget/services/: __init__.py  timezone.py
src/watchwidget/widgets/: __init__.py  hour_header.py  timeline_canvas.py  timeline_row.py
