[project]
name = "watchwidget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruben Duarte", email = "ruben_duarte10@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.1",
    "pywin32>=312",
    "tzdata>=2026.2",
]

[project.scripts]
watchwidget = "watchwidget.main:run"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
